--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Spa</title>
-  <base href="./">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -12,5 +12,5 @@
   <app-root></app-root>
 
  
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="scripts.70575a92e96be75efb2f.js" defer></script><script src="main.a35ea5aaf1a48fd5311a.js" defer></script></body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="scripts.70575a92e96be75efb2f.js" defer></script><script src="main.b2f97c280186bb7a77d4.js" defer></script></body>
 </html>
